--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,62 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
 
+/* FONT DECLARATIONS */
+@font-face {
+    font-family: 'Helvetica';
+    src: local('Helvetica');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* GLOBAL STYLES */
+:root {
+    --font-helvetica: 'Helvetica', sans-serif;
+    --font-roboto-mono: 'Roboto Mono', monospace;
+    
+    /* Colors */
+    --dark-beige: #E4E0D4;
+    --beige: #F2EEE4;
+    --light-beige: #FCF9F2;
+    --white: #FFFFFF;
+    --black: #2B2B28;
+    --dark-green: #4E4F48;
+    --green: #AEB29D;
+    --light-green: #EAEDDE;
+}
+
+body {
+    font-family: var(--font-helvetica);
+}
+
+code, pre {
+    font-family: var(--font-roboto-mono);
+}
+
 h1 {
     @apply text-2xl uppercase md:text-5xl;
 }
 h2 {
-    @apply uppercase;
+    @apply text-xl  uppercase md:text-3xl;
 }
 h3 {
     @apply uppercase;
+    font-family: var(--font-roboto-mono);
 }
 h4 {
     @apply uppercase;
+    font-family: var(--font-roboto-mono);
+    font-style: italic;
+}
+h5 {
+    font-family: var(--font-roboto-mono);
+}
+a {
+    font-family: var(--font-roboto-mono);
+    font-style: italic;
+    text-decoration: underline;
+}
+button {
+    font-family: var(--font-roboto-mono);
+    text-transform: uppercase;
 }
