--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,3 +1,6 @@
+---
+import Navigation from '../components/Navigation.astro';
+---
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +8,11 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Ciel Park - Portfolio</title>
 		<link rel="stylesheet" href="src/styles/global.css" />
 	</head>
-	<body>
+	<body class="black">
+		<Navigation/>
 		<slot />
 	</body>
 </html>
