--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,8 +1,9 @@
 <!-- Navigation -->
 <section class="absolute top-0 left-0 right-0 z-50">
-  <nav class="px-6 py-2 uppercase">
-    <div class="mx-auto flex h-12 max-w-6xl items-center justify-between">
+  <nav class="container-custom py-2 uppercase">
+    <div class="flex h-12 items-center justify-between">
       <a href="../" class="text-3xl">✦</a>
+      
       <!-- Hamburger Menu Button -->
       <button id="menu-button" class="block px-2 py-1 sm:hidden">
         <svg
@@ -19,6 +20,7 @@
           stroke-linecap="round"></path>
         </svg>
       </button>
+      
       <!-- Nav Links -->
       <div class="flex hidden space-x-4 sm:flex sm:space-x-20">
         <a href="../" class="flex items-center transition-colors">
@@ -32,14 +34,16 @@
       </div>
     </div>
   </nav>
+  
   <!-- Mobile Menu -->
   <div
     id="mobile-menu"
-    class="absolute right-4 top-20 mt-2 flex hidden w-fit flex-col items-end rounded-xl bg-black/80 backdrop-blur-sm sm:hidden">
+    class="absolute right-4 top-20 mt-2 flex hidden w-fit flex-col items-end rounded-xl sm:hidden">
     <a href="../" class="px-4 py-2 "><h4>Work</h4></a>
     <a href="../about" class="px-4 py-2 "><h4>About</h4></a>
     <a href="https://drive.google.com/file/d/1aYkbI1Z-brlo3FeWJqVnlnxskvi6ihHu/view?usp=sharing" class="px-4 py-2"><h4>Resume</h4></a>
   </div>
+
 </section>
 
 <script>
