--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@
     --color-dark-beige: #E4E0D4;
     --color-green: #AEB29D;
     --color-light-green: #EAEDDE;
-    --color-black: #2B2B28;
+    --color-dark: #2B2B28;
   }
 
 /* GLOBAL STYLES */
@@ -61,4 +61,9 @@ a:hover {
 button {
     font-family: var(--font-roboto-mono);
     text-transform: uppercase;
+}
+
+/* CUSTOM CLASSES */
+.container-custom {
+    @apply max-w-6xl mx-auto px-6;
 }
