--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -7,7 +7,7 @@ import Footer from '../components/Footer.astro';
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Ciel Park - Portfolio</title>
 		<link rel="stylesheet" href="src/styles/global.css" />
