--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,30 @@
 ---
 import Layout from '../layouts/Base.astro';
+import Hero from '../components/Hero.astro';
+import type { SanityDocument } from "@sanity/client";
+import { sanityClient } from "sanity:client";
+
+const POSTS_QUERY = `*[
+  _type == "post"
+  && defined(slug.current)
+]|order(publishedAt desc)[0...12]{_id, title, slug, description}`;
+
+const posts = await sanityClient.fetch<SanityDocument[]>(POSTS_QUERY);
 ---
 
 <Layout>
-	<!-- Hero Section -->
-	<section class="bg-dark-beige">
-		<div class="container-custom min-h-screen flex flex-col justify-center">
-			<div class="w-1/2 flex flex-col gap-4">
-				<!-- Left Side - Intro -->
-				<h1>Ciel Park</h1>
-				<h5>is a designer & developer creating digital products that drive engagement & growth</h5>
-				<!--Overline -->
-				<div class="flex justify-between pt-4 border-t border-black">
-					<h5>Currently @ Northrop Grumman</h5> <h5>Previously @ Viget</h5>
-				</div>
-			</div>
-			
-			
-			<!-- Right Side - Image -->
-			<div class="absolute top-0 right-0 w-2/5 h-svh overflow-hidden"> 
-				<img src="/src/assets/hero-tree.jpg" alt="Inkbrush painting of a tree" class="w-full h-full object-cover" />
-			</div>
-		</div>
-		
-		
-	</section>
+
+	<Hero/>
 
 	<!-- Projects Section -->
-	<section class="py-20 container-custom">
+	<section class="py-40 container-custom flex flex-col gap-24">
 			<h2>✦ Experience</h2>
 			<div class="space-y-16">
+				
 				<!-- Project 1 -->
 				<div class="group">
-				  <div class="relative overflow-hidden rounded-2xl shadow-lg mb-6">
+					
+				  <div class="relative overflow-hidden mb-6">
 					<img 
 					  src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2015&q=80"
 					  alt="E-commerce Platform Dashboard"
@@ -49,14 +41,35 @@ import Layout from '../layouts/Base.astro';
 					  </div>
 					</div>
 				  </div>
-				  <p class="text-gray-600 leading-relaxed text-lg">
+				  <h5 class="text-center">
 					A comprehensive e-commerce platform featuring user authentication, product management, shopping cart functionality, 
-					and secure payment processing. Built with a modern tech stack including React for the frontend, Node.js/Express 
-					for the backend, and PostgreSQL for data persistence. Integrated Stripe for seamless payment processing and 
-					implemented advanced features like inventory management, order tracking, and analytics dashboard for vendors.
-				  </p>
+					and secure payment processing.
+				  </h5>
 				</div>
-	  
+
+				<!-- Projects -->
+				<div class="group">
+					
+					<div class="container mx-auto min-h-screen max-w-3xl p-8">
+						<ul class="flex flex-col gap-y-4">
+						{posts.map((post) => (
+							// Overline
+							<div class="flex justify-between py-4 border-t border-black">
+								<h3>{post.title}</h3> 
+								<h4>UX Design ✦ UX Research ✦ UI Dev</h4>
+							</div>
+							
+								<a href={`/posts/${post.slug.current}`}>
+									<img src={post.image} alt={post.title}/>
+								</a>
+								<h5 class="text-center">{post.description}</h5>
+								
+							
+							))}
+						</ul>
+					</div>
+				</div>
+
 			  <!-- View All Projects Link -->
 			  <div class="text-center mt-16">
 				<a href="/projects" class="inline-flex items-center bg-gray-900 text-white px-8 py-4 rounded-lg hover:bg-gray-800 transition-colors text-lg font-medium">
