--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@
         
         <!-- Right Side - Image -->
         <div class="absolute top-0 right-0 w-2/5 h-svh overflow-hidden"> 
-            <img src="/src/assets/hero-tree.jpg" alt="Inkbrush painting of a tree" class="w-full h-full object-cover" />
+            <img src="https://cdn.sanity.io/images/rnk0k1nk/production/77bfecd332da17ba9e69bf060ba1e9eb67d41bc8-4619x7266.jpg" alt="Inkbrush painting of a tree" class="w-full h-full object-cover" />
         </div>
     </div>
 </section>
