jeez homepage images

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,7 +19,7 @@ import Layout from '../layouts/Base.astro';
             
             <!-- Right Side - Image -->
             <div class="w-1/2 overflow-hidden flex justify-end items-center"> 
-                <img src="/src/assets/hero-tree.jpg" alt="Inkbrush painting of a tree" class="h-140 object-cover border border-dark" />
+                <img src="https://cdn.sanity.io/images/rnk0k1nk/production/bb4fbceeb5d300985534664bdb5f096c445bb149-857x1284.jpg" alt="Photo of Ciel Park" class="h-140 object-cover border border-dark" />
             </div>
         </div>
     </section>
