works inner pages basic styling

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -11,7 +11,7 @@ import '../styles/global.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>Ciel Park - Portfolio</title>
-		<link rel="stylesheet" href="src/styles/global.css" />
+		<link rel="stylesheet" href="/src/styles/global.css" />
 	</head>
 	<body class="bg-beige text-dark">
 		<Navigation/>
