mix-blend-mode hero, luminosity case studies, custom cursor

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<section class="absolute top-0 left-0 right-0 z-50">
+<section class="absolute top-0 left-0 right-0 z-50 mix-blend-difference text-white">
   <nav class="container-custom py-2 uppercase">
     <div class="flex h-12 items-center justify-between">
       <a href="../" class="text-3xl">✦</a>
@@ -22,11 +22,11 @@
       </button>
       
       <!-- Nav Links -->
-      <div class="flex hidden space-x-4 sm:flex sm:space-x-20">
-        <a href="../" class="flex items-center transition-colors">
+      <div class="flex hidden space-x-4 sm:flex sm:space-x-20 z-100">
+        <a href="../" class="flex items-center transition-colors hover-target">
         Work
         </a>
-        <a href="../about" class="  transition-colors">About</a>
+        <a href="../about" class="">About</a>
         <a
         href="https://drive.google.com/file/d/1aYkbI1Z-brlo3FeWJqVnlnxskvi6ihHu/view?usp=sharing"
         class="transition-colors">Resume</a
@@ -45,6 +45,7 @@
   </div>
 
 </section>
+
 
 <script>
   // script for displaying mobile menu
