--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,12 @@
 <!-- Hero Section -->
-<section class="bg-dark-beige border-b border-dark">
+<section class="bg-dark-beige ">
     <div class="container-custom min-h-screen flex flex-col justify-center">
         <div class="w-1/2 flex flex-col gap-4">
             <!-- Left Side - Intro -->
             <h1>Ciel Park</h1>
             <h5>is a designer & developer creating digital products that drive engagement & growth</h5>
             <!--Overline -->
-            <div class="flex justify-between py-4 border-t border-black">
+            <div class="flex justify-between py-4 border-t border-dark">
                 <h5>Currently @ Northrop Grumman</h5> <h5>Previously @ Viget</h5>
             </div>
         </div>
@@ -15,6 +15,8 @@
         <!-- Right Side - Image -->
         <div class="absolute top-0 right-0 w-2/5 h-svh overflow-hidden"> 
             <img src="https://cdn.sanity.io/images/rnk0k1nk/production/77bfecd332da17ba9e69bf060ba1e9eb67d41bc8-4619x7266.jpg" alt="Inkbrush painting of a tree" class="w-full h-full object-cover" />
+            <!-- Image Overlay -->
+            <!-- <div class="absolute inset-0 bg-gradient-to-b from-black/50 to-transparent"></div> -->
         </div>
     </div>
 </section>
