--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,21 +6,41 @@
     <div class="absolute inset-0 z-[-1] overflow-hidden">
     </div>
     <div class="relative px-6 py-2">
-      <div class="flex flex-col items-center gap-10">
-        <div class="my-20 flex flex-wrap items-center">
-          <h3>
-            <span class="inline">Always open to feedback, questions, and making new friends ✽ </span>
-          </h3>
-        </div>
+      <div class="flex flex-col py-20 gap-10">
         <div
-          class="-mt-6 flex w-full flex-col-reverse justify-between sm:flex-row">
-          <div class="emphasis flex gap-4">
-            <h5>Washington DC</h5>
-            <h5 id="clock"></h5>
+          class="flex w-full flex-col-reverse sm:flex-row justify-between">
+          <div class="flex flex-col gap-2">
+            <h3 class="mb-2">© 2025 Ciel Park</h3>
+            <h5>Made with &lt3, coffee, and lots of late nights</h5>
           </div>
-          <a href="mailto:cielcpark@gmail.com" class="hoverable emphasis link"
-            >cielcpark@gmail.com</a
-          >
+          <div class="flex flex-col gap-2">
+            <h3 class="mb-2">Contact</h3>
+            <a href="mailto:cielcpark@gmail.com">
+              <h5>cielcpark@gmail.com</h5>
+            </a>
+            <div class="flex gap-4">
+              <h5>Washington DC</h5>
+              <h5 id="clock"></h5>
+            </div>
+          </div>
+          <div class="flex flex-col gap-2">
+            <h3 class="mb-2">Elsewhere</h3>
+            <a href="https://www.linkedin.com/in/clprk/">
+              <h5>Linkedin</h5>
+            </a>
+            <a href="https://www.figma.com/@clprk">
+              <h5>Figma</h5>
+            </a>
+            <a href="https://github.com/clprk">
+              <h5>Github</h5>
+            </a>
+            <a href="https://codepen.io/clprk">
+              <h5>Codepen</h5>
+            </a>
+          </div>
+          <a href="../" class="text-3xl">✦</a>
+          
+          
         </div>
       </div>
     </div>
