--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -23,13 +23,13 @@
       
       <!-- Nav Links -->
       <div class="flex hidden space-x-4 sm:flex sm:space-x-20 z-100">
-        <a href="../" class="flex items-center transition-colors hover-target">
+        <a href="../" class="flex items-center">
         Work
         </a>
-        <a href="../about" class="">About</a>
+        <a href="../about" >About</a>
         <a
         href="https://drive.google.com/file/d/1aYkbI1Z-brlo3FeWJqVnlnxskvi6ihHu/view?usp=sharing"
-        class="transition-colors">Resume</a
+        >Resume</a
         >
       </div>
     </div>
