--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -15,39 +15,43 @@ import '../styles/global.css';
 	</head>
 	<body class="bg-beige text-dark cursor-none">
 		<!-- Custom Cursor -->
-		<div id="custom-cursor" class="fixed top-0 left-0 w-3 h-3 bg-dark rounded-full z-500 transition-transform duration-50"></div>
+		<div id="custom-cursor" class="fixed top-0 left-0 w-3 h-3 bg-dark rounded-full z-[9999]"></div>
+		<!-- Navigation -->
 		<Navigation/>
+		<!-- Body Content -->
 		<slot />
+		<!-- Footer -->
 		<Footer/>
+		<script>
+			const cursor = document.getElementById("custom-cursor");
+			let isHovering = false;
+		
+			// Handle mouse movement (position only)
+			document.addEventListener("mousemove", (e) => {
+				if (cursor) {
+					cursor.style.left = `${e.clientX}px`;
+					cursor.style.top = `${e.clientY}px`;
+				}
+			});
+			
+		
+			const links = document.querySelectorAll("a");
+			links.forEach(target => {
+				target.style.cursor = 'none';
+				target.addEventListener('mouseenter', () => {
+					if (cursor) {
+						cursor.style.transform = 'scale(1.5)';
+					}
+				});
+				target.addEventListener('mouseleave', () => {
+					if (cursor) {
+						cursor.style.transform = 'scale(1)';
+					}
+				});
+			});
+		</script>
 	</body>
 </html>
 
-<script>
 
-	let scale = 1;
-
-	const cursor = document.getElementById("custom-cursor");
-	document.addEventListener("mousemove", (e) => {
-		if (cursor) {
-			cursor.style.transform = `translate(${e.clientX}px, ${e.clientY}px) scale(${scale})`;
-		}
-	});
-
-	document.addEventListener("DOMContentLoaded", () => {
-		document.querySelectorAll('a').forEach((link) => {
-			link.classList.add('hover-target');
-		});
-	});
-
-	const hoverTargets = document.querySelectorAll('.hover-target');
-	hoverTargets.forEach(target => {
-		target.addEventListener('mouseenter', () => {
-			scale = 1.5;
-		});
-		target.addEventListener('mouseleave', () => {
-			scale = 1;
-		});
-	});
-
-</script>
 
