--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@
     <div class="relative px-6 py-2">
       <div class="flex flex-col py-20 gap-10">
         <div
-          class="flex w-full flex-col-reverse sm:flex-row justify-between">
+          class="flex w-full flex-col-reverse sm:flex-row justify-between gap-10">
           <div class="flex flex-col gap-2">
             <h3 class="mb-2">© 2025 Ciel Park</h3>
             <h5>Made with &lt3, coffee, and lots of late nights</h5>
