--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,18 +36,18 @@ const works = await sanityClient.fetch<SanityDocument[]>(WORKS_QUERY);
 	<Hero/>
 
 	<!-- Projects Section -->
-	<section class="py-50 container-custom-small flex flex-col gap-38">
+	<section class="py-20 md:py-50 container-custom-small flex flex-col gap-18 md:gap-38">
 			<h2>✦ Experience</h2>
 
 			<!-- Projects -->
 			<div class="min-h-screen">
-				<ul class="flex flex-col gap-50">
+				<ul class="flex flex-col gap-20 md:gap-50">
 				{works.map((work) => (
 					<div class="flex flex-col gap-8">
 						<!-- Overline -->
 						<div class="flex justify-between pt-4 border-t border-dark">
 							<h3>{work.title}</h3> 
-							<h4>
+							<h4 class="hidden md:block">
 								{work.tags && work.tags.length > 0 
 									? work.tags.join(' ✦ ')
 									: ''
@@ -71,7 +71,7 @@ const works = await sanityClient.fetch<SanityDocument[]>(WORKS_QUERY);
 							</a>
 							
 						</div>
-						<h5 class="text-center">{work.description}</h5>
+						<h5 class="md:text-center">{work.description}</h5>
 					</div>
 					
 					))}
