experiences section and basic responsiveness

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -35,7 +35,7 @@ import '../styles/global.css';
 	</head>
 	<body class="bg-beige text-dark cursor-none">
 		<!-- Custom Cursor -->
-		<div id="custom-cursor" class="custom-cursor"></div>
+		<div id="custom-cursor" class="custom-cursor hidden md:block"></div>
 		<!-- Navigation -->
 		<Navigation/>
 		<!-- Body Content -->
