--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,23 +5,21 @@
   <div class="container-custom">
     <div class="absolute inset-0 z-[-1] overflow-hidden">
     </div>
-    <div class="relative px-6 py-2">
+    <div class="relative md:px-6 py-2">
       <div class="flex flex-col py-20 gap-10">
         <div
           class="flex w-full flex-col-reverse sm:flex-row justify-between gap-10">
           <div class="flex flex-col gap-2">
             <h3 class="mb-2">© 2025 Ciel Park</h3>
-            <h5>Made with &lt3, coffee, and lots of late nights</h5>
+            <h5>Made with &lt3, coffee, &amp lots of late nights</h5>
           </div>
           <div class="flex flex-col gap-2">
             <h3 class="mb-2">Contact</h3>
             <a href="mailto:cielcpark@gmail.com">
               <h5>cielcpark@gmail.com</h5>
             </a>
-            <div class="flex gap-4">
-              <h5>Washington DC</h5>
-              <h5 id="clock"></h5>
-            </div>
+            <h5>Washington DC</h5>
+            <h5 id="clock"></h5>
           </div>
           <div class="flex flex-col gap-2">
             <h3 class="mb-2">Elsewhere</h3>
