--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const works = await sanityClient.fetch<SanityDocument[]>(WORKS_QUERY);
 					<div class="flex flex-col gap-8">
 						<!-- Overline -->
 						<div class="flex justify-between pt-4 border-t border-dark">
-							<h3>{work.title}</h3> 
+							<h3 class="-mb-4">{work.title}</h3> 
 							<h4 class="hidden md:block">
 								{work.tags && work.tags.length > 0 
 									? work.tags.join(' ✦ ')
