adjust spacing, clean up unused files

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,14 @@
             <h5>is a designer & developer creating digital products that drive engagement & growth</h5>
             <!--Overline -->
             <div class="flex justify-between py-4 border-t border-dark">
-                <h5>Currently @ Northrop Grumman</h5> <h5 class="hidden md:block">Previously @ Viget</h5>
+                <div class="flex gap-2">
+                    <h5>Currently @</h5> 
+                    <a href="https://www.northropgrumman.com/" target="_blank"><h5>Northrop Grumman</h5></a>
+                </div>
+                <div class="gap-2 hidden md:flex"> 
+                    <h5>Previously @</h5>
+                    <a href="https://viget.com" target="_blank"><h5>Viget</h5></a>
+                </div>
             </div>
         </div>
         
